Fix: a spacing bug in firefox
Remove spacing that only happens in Firefox, where there is extra space between flag and country name

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -55,6 +55,7 @@ nav {
 
 main {
   width: calc(100% - 9rem);
+  height: 100%;
 }
 
 main>header {
